<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="49dp"
    android:id="@+id/bottom_nav"
    android:background="@color/white"
    android:layout_alignParentBottom="true">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/cat">

        <ImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="2dp"
            android:scaleType="centerInside"
            android:id="@+id/cat_image"
            android:src="@drawable/cat"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cat_text"
            android:text="@string/cat"
            android:layout_marginBottom="4dp"
            android:textSize="9sp"
            android:gravity="center"
            android:textColor="@drawable/text_selector"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/dress">

        <ImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="2dp"
            android:scaleType="centerInside"
            android:id="@+id/dress_image"
            android:src="@drawable/dress"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dress_text"
            android:text="@string/dress"
            android:layout_marginBottom="4dp"
            android:textSize="9sp"
            android:gravity="center"
            android:textColor="@drawable/text_selector"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/bag">

        <ImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="2dp"
            android:scaleType="centerInside"
            android:id="@+id/bag_image"
            android:src="@drawable/bag"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bag_text"
            android:text="@string/dress"
            android:layout_marginBottom="4dp"
            android:textSize="9sp"
            android:gravity="center"
            android:textColor="@drawable/text_selector"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/shoses">

        <ImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="2dp"
            android:scaleType="centerInside"
            android:id="@+id/shoses_image"
            android:src="@drawable/shoses"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/shoses_text"
            android:text="@string/shoses"
            android:layout_marginBottom="4dp"
            android:textSize="9sp"
            android:gravity="center"
            android:textColor="@drawable/text_selector"/>
    </LinearLayout>

</LinearLayout>